2007-03-10  Glenn Morris  <rgm@gnu.org>

	* woman.el (woman-change-fonts): Add a hack to deal with
	font-escape followed by "." at start of a line.
	(woman2-IP): Add a hack to deal with consecutive requests.
	(woman2-tagged-paragraph): Extend existing hack to handle "sp".

2007-03-10  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-change): Wrap in save-match-data.

2007-03-09  Richard Stallman  <rms@gnu.org>

	* abbrev.el (abbrev): Add `provide'.

2007-03-09  Thien-Thi Nguyen  <ttn@gnu.org>

	* net/ange-ftp.el (ange-ftp-try-passive-mode): Doc fix.

2007-03-09  Martin Rudalics  <rudalics@gmx.at>

	* complete.el (PC-try-completion): New function.
	(PC-do-completion, read-file-name-internal): Use it instead of
	try-completion.

2007-03-08  Alan Mackenzie  <acm@muc.de>

	Remove stale tokens from `c-found-types' cache.

	* progmodes/cc-mode.el (c-unfind-enclosing-token)
	(c-unfind-coalesced-tokens, c-before-change): New functions.
	(c-maybe-stale-found-type): New variable.

	* progmodes/cc-engine.el (c-partial-ws-p, c-unfind-type)
	(c-trim-found-types): New functions.

2007-03-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-remove-props): Don't mark the buffer modified.
	(debug-ignored-errors): Add entry from smerge-match-conflict.

2007-03-08  J.D. Smith  <jdsmith@as.arizona.edu>

	* progmodes/idlw-help.el (idlwave-do-context-help1): Don't visit
	special help topics for keywords.
	(idlwave-help-assistant-command): Include ".exe" for ms-dos
	etc. Assistant command.

2007-03-08  Chong Yidong  <cyd@stupidchicken.com>

	* replace.el (occur-engine): Move buffer-undo-list binding...
	(occur-1): ...to here.

	* complete.el (PC-bindings): Rebind M-TAB in read-expression-map.

	* simple.el (minibuffer-completing-symbol): New var.
	(eval-expression): Use it.
	(completion-setup-function): Don't bind completion-base-size when
	completing a symbol in the minibuffer.

2007-03-08  Nick Roberts  <nickrob@snap.net.nz>
